tests/api/reference/negative/10-to-string-aggregate.asm
const invalid: string = to_string(list.of("a", "b"))
